improve gdpr settings and update swagger doc
