# api/api-iam/iam-external/src/main/java/fr/gouv/vitamui/iam/external/server/service/CustomerExternalService.java
@@ -36,22 +36,7 @@
  */
 package fr.gouv.vitamui.iam.external.server.service;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.io.Resource;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
-
 import com.fasterxml.jackson.databind.JsonNode;
-
 import fr.gouv.vitamui.commons.api.domain.DirectionDto;
 import fr.gouv.vitamui.commons.api.domain.PaginatedValuesDto;
 import fr.gouv.vitamui.commons.api.domain.ServicesData;
@@ -64,11 +49,22 @@ import fr.gouv.vitamui.iam.security.client.AbstractResourceClientService;
 import fr.gouv.vitamui.iam.security.service.ExternalSecurityService;
 import lombok.Getter;
 import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.Resource;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 /**
  * The service to read, create, update and delete the customers.
- *
- *
  */
 @Getter
 @Setter
@@ -80,8 +76,9 @@ public class CustomerExternalService extends AbstractResourceClientService<Custo
     private final CustomerInternalWebClient customerInternalV2RestClient;
 
     @Autowired
-    public CustomerExternalService(final CustomerInternalRestClient customerInternalRestClient, final CustomerInternalWebClient customerInternalV2RestClient,
-            final ExternalSecurityService externalSecurityService) {
+    public CustomerExternalService(final CustomerInternalRestClient customerInternalRestClient,
+        final CustomerInternalWebClient customerInternalV2RestClient,
+        final ExternalSecurityService externalSecurityService) {
         super(externalSecurityService);
         this.customerInternalRestClient = customerInternalRestClient;
         this.customerInternalV2RestClient = customerInternalV2RestClient;
@@ -121,8 +118,9 @@ public class CustomerExternalService extends AbstractResourceClientService<Custo
     }
 
     @Override
-    public PaginatedValuesDto<CustomerDto> getAllPaginated(final Integer page, final Integer size, final Optional<String> criteria,
-            final Optional<String> orderBy, final Optional<DirectionDto> direction) {
+    public PaginatedValuesDto<CustomerDto> getAllPaginated(final Integer page, final Integer size,
+        final Optional<String> criteria,
+        final Optional<String> orderBy, final Optional<DirectionDto> direction) {
         return super.getAllPaginated(page, size, criteria, orderBy, direction);
     }
 
@@ -136,7 +134,8 @@ public class CustomerExternalService extends AbstractResourceClientService<Custo
 
     @Override
     protected Collection<String> getAllowedKeys() {
-        return Arrays.asList("id", "name", "code", "companyName", "enabled", "language", "otp", "defaultEmailDomain", "emailDomains", "subrogeable");
+        return Arrays.asList("id", "name", "code", "companyName", "enabled", "language", "otp", "defaultEmailDomain",
+            "emailDomains", "subrogeable");
     }
 
     @Override
@@ -177,4 +176,7 @@ public class CustomerExternalService extends AbstractResourceClientService<Custo
         return getClient().getCustomerLogo(getInternalHttpContext(), id);
     }
 
+    public boolean getGdprSettingStatus() {
+        return getClient().getGdprSettingStatus(getInternalHttpContext());
+    }
 }
